Fix issue with meson files in ext directory

--- a/ext/opencv/meson.build
+++ b/ext/opencv/meson.build
@@ -1,4 +1,5 @@
 gstinference_sources = [
+  'gstplugin.cc',
   'gstclassificationoverlay.cc',
   'gstinferenceoverlay.cc',
   'gstdetectionoverlay.cc',
@@ -87,7 +88,7 @@ if opencv_found
   gstopencv = library('gstinferenceoverlayplugin',
     gst_opencv_all_sources,
     c_args : c_args,
-    cpp_args : cpp_args,
+    cpp_args : cpp_args + gstopencv_cargs ,
     include_directories : [configinc, inference_inc_dir],
     dependencies : gst_opencv_all_dependencies,
     install : true,
