--- a/ext/opencv/meson.build
+++ b/ext/opencv/meson.build
@@ -7,23 +7,19 @@ gstinference_sources = [
 ]
 
 opencv_all_sources = []
-opencv_all_dependencies = [gst_base_dep, gst_video_dep, opencv_dep, gstopencv_dep]
-if gstinference_dep.found()
-  opencv_all_sources += gstinference_sources
-  opencv_all_dependencies += gstinference_dep
-else
-  error('GstInference dependencie were not found.')
-endif
+opencv_all_dependencies = [gst_base_dep, gst_video_dep, opencv_dep, gstopencv_dep, gstinference_dep]
 
 if opencv_dep.found()
-  gstopencv = library('gstinferenceoverlayplugin',
-    opencv_all_sources,
+  gstinferenceoverlay = library('gstinferenceoverlayplugin',
+    gstinference_sources,
     cpp_args : cpp_args,
     include_directories : [configinc, inference_inc_dir],
     dependencies : opencv_all_dependencies,
     install : true,
     install_dir : plugins_install_dir,
   )
+
+  plugins += [gstinferenceoverlay]
 else
-  error('OpenCV dependencies were not found.')
+  warning('OpenCV dependencies were not found for gstinferenceoverlayplugin.')
 endif
