--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,12 +5,13 @@ on:
     branches:
       - master
       - dev-*
+      - feature/add-meson-ci-jobs
   pull_request:
     branches:
       - dev-*
 
 jobs:
-  build:
+  build_autotools:
     runs-on: ubuntu-18.04
     container: ridgerun/r2inference:v0.1.2
     env: 
@@ -46,4 +47,44 @@ jobs:
     - name: Check gst-inference
       env:
         LD_LIBRARY_PATH: /usr/local/lib/
-      run: make check VERBOSE=1
+      run: |
+        make check VERBOSE=1
+        gst-inspect-1.0 inference
+  build_meson:
+    runs-on: ubuntu-18.04
+    container: ridgerun/r2inference:v0.1.4
+    env: 
+      PREFIX: /usr
+      CFLAGS: -Werror
+      CXXFLAGS: -Werror
+    steps:
+    - uses: actions/checkout@v2        
+    - name: Build backend
+      run: |
+        tar -C /usr/local -xzf /root/r2inference/backends/tensorflow/v1.15.0/libtensorflow-cpu-linux-x86_64-1.15.0.tar.gz
+        ldconfig
+    - name: Checkout r2i repo
+      uses: actions/checkout@master
+      with:
+        repository: RidgeRun/r2inference
+    - name: Build r2i
+      run: |
+        NOCONFIGURE=1 ./autogen.sh
+        ./configure --disable-docs --enable-tensorflow
+        make
+        make install
+    - name: Checkout gst-inference repo
+      uses: actions/checkout@v2
+      with:
+        remote: true
+        submodules: true
+    - name: Build gst-inference
+      run: |
+        meson build --prefix $PREFIX 
+        ninja -C build
+    - name: Check gst-inference
+      env:
+        LD_LIBRARY_PATH: /usr/local/lib/
+      run: |
+        ninja -C build test -v
+        gst-inspect-1.0 inference
