Clean meson file for inference base overlay

--- a/gst-libs/gst/opencv/meson.build
+++ b/gst-libs/gst/opencv/meson.build
@@ -7,12 +7,10 @@ opencv_headers = [
 ]
 
 if opencv_dep.found()
-  opencv_all_sources = opencv_sources
-  opencv_all_headers = opencv_headers
   opencv_all_dependencies = [gst_base_dep, gst_video_dep, opencv_dep]
 
-  gstopencv = library('gstinferencebaseoverlay-@0@'.format(api_version),
-    opencv_all_sources,
+  inferencebaseoverlay = library('gstinferencebaseoverlay-@0@'.format(api_version),
+    opencv_sources,
     c_args : c_args + ['-DBUILDING_GST_INFERENCE'],
     cpp_args: cpp_args + ['-DBUILDING_GST_INFERENCE'],
     include_directories : [configinc, inference_inc_dir],
@@ -21,11 +19,11 @@ if opencv_dep.found()
     dependencies : opencv_all_dependencies,
   )
 
-  gstopencv_dep = declare_dependency(link_with: gstopencv,
+  inferencebaseoverlay_dep = declare_dependency(link_with: inferencebaseoverlay,
     include_directories : [inference_inc_dir],
     dependencies : opencv_all_dependencies)
 
-  install_headers(opencv_all_headers, subdir : 'gstreamer-1.0/gst/opencv')
+  install_headers(opencv_headers, subdir : 'gstreamer-1.0/gst/opencv')
 else
   warning('OpenCV was not found in this system. Base overlay utils will not be built.')
 endif
