--- a/gst-libs/gst/r2inference/Makefile.am
+++ b/gst-libs/gst/r2inference/Makefile.am
@@ -11,6 +11,7 @@ libgstinference_@GST_API_VERSION@_la_SOURCES=	\
 	gstncsdk.cc				\
 	gsttensorflow.cc			\
 	gsttflite.cc				\
+	gsttensorrt.cc				\
 	gstinferencepreprocess.c		\
 	gstinferencepostprocess.c		\
 	gstinferencedebug.c			\
@@ -49,6 +50,7 @@ gstinferenceinclude_HEADERS=		\
 	gstncsdk.h			\
 	gsttensorflow.h			\
 	gsttflite.h			\
+	gsttensorrt.h			\
 	gstinferencepreprocess.h	\
 	gstinferencepostprocess.h	\
 	gstinferencedebug.h		\
