--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,9 @@ on:
 
 jobs:
   build_autotools:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-18.04
     strategy:
       matrix:
-       os: [ubuntu-18.04]
        container: ["ridgerun/r2inference:v0.1.5", "ridgerun/r2inference-ubuntu-16.04:v0.3.0"]
     container:
       image: ${{ matrix.container }}
@@ -44,6 +43,8 @@ jobs:
         submodules: true
     - name: Build gst-inference
       run: |
+        CFLAGS="${{ env.CFLAGS }}"
+        CXXFLAGS="${{ env.CXXFLAGS }}"
         NOCONFIGURE=1 ./autogen.sh
         ./configure  --disable-docs --prefix $PREFIX --libdir $PREFIX
         make
@@ -69,10 +70,9 @@ jobs:
         labels=$ROOT/imagenet_labels.txt crop=false overlay=true filter=-1 ! \
         fakesink silent=false sync=false async=false -v
   build_meson:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-18.04
     strategy:
       matrix:
-       os: [ubuntu-18.04]
        container: ["ridgerun/r2inference:v0.1.5", "ridgerun/r2inference-ubuntu-16.04:v0.3.0"]
     container:
       image: ${{ matrix.container }}
@@ -92,6 +92,8 @@ jobs:
         repository: RidgeRun/r2inference
     - name: Build r2i
       run: |
+        CFLAGS="${{ env.CFLAGS }}"
+        CXXFLAGS="${{ env.CXXFLAGS }}"
         NOCONFIGURE=1 ./autogen.sh
         ./configure --disable-docs --enable-tensorflow
         make
