--- a/gst-libs/gst/r2inference/meson.build
+++ b/gst-libs/gst/r2inference/meson.build
@@ -8,6 +8,7 @@ gstinference_sources = [
 	'gstinferenceprediction.c',
 	'gstinferencepostprocess.c',
 	'gstinferencepreprocess.c',
+	'gstedgetpu.cc',
 	'gstncsdk.cc',
 	'gsttensorflow.cc',
 	'gsttflite.cc',
@@ -25,6 +26,7 @@ gstinference_headers = [
 	'gstinferencepreprocess.h',
 	'gstinferenceclassification.h',
 	'gstinferenceprediction.h',
+	'gstedgetpu.h',
 	'gstncsdk.h',
 	'gsttensorflow.h',
 	'gsttflite.h',
