Change GstBackend to GstBaseBackend
This will change the backend class name to be GstBaseBackend
that reflects more properly is functionality. This is a base
class for the different backends types.

--- a/gst-libs/gst/r2inference/Makefile.am
+++ b/gst-libs/gst/r2inference/Makefile.am
@@ -6,7 +6,7 @@ libgstinference_@GST_API_VERSION@_la_SOURCES=	\
 	gstchildinspector.c			\
 	gstinferencemeta.c			\
 	gstinferencebackends.cc			\
-	gstbackend.cc				\
+	gstbasebackend.cc				\
 	gstinferencepreprocess.c		\
 	gstinferencepostprocess.c		\
 	gstinferencedebug.c			\
@@ -40,8 +40,8 @@ gstinferenceinclude_HEADERS=		\
 	gstvideoinference.h		\
 	gstchildinspector.h		\
 	gstinferencebackends.h		\
-	gstbackend.h			\
-	gstbackendsubclass.h		\
+	gstbasebackend.h			\
+	gstbasebackendsubclass.h		\
 	gstinferencepreprocess.h	\
 	gstinferencepostprocess.h	\
 	gstinferencedebug.h		\
