mobilenetv2ssd: Add element base without postprocess

--- a/ext/r2inference/meson.build
+++ b/ext/r2inference/meson.build
@@ -6,6 +6,7 @@ gstinference_sources = [
 	'gstinceptionv4.c',
 	'gstinference.c',
 	'gstmobilenetv2.c',
+	'gstmobilenetv2ssd.c',
 	'gstresnet50v1.c',
 	'gsttinyyolov2.c',
 	'gsttinyyolov3.c'
