Add pre-commit hook with meson

--- a/meson.build
+++ b/meson.build
@@ -225,7 +225,7 @@ pkgconfig = import('pkgconfig')
 
 # Install git hooks
 python3 = import('python').find_installation()
-run_command(python3, '-c', 'import shutil; shutil.copy("common/hooks/pre-commit.hook", ".git/hooks/pre-commit")')
+run_command(python3, '-c', 'import shutil; shutil.copy("hooks/pre-commit.hook", ".git/hooks/pre-commit")')
 
 # Meson will generate a header file all the entries in the configuration data object
 configure_file(output : 'config.h', configuration : cdata)
