Add rosetta support

--- a/ext/r2inference/meson.build
+++ b/ext/r2inference/meson.build
@@ -8,7 +8,8 @@ gstinference_sources = [
 	'gstmobilenetv2ssd.c',
 	'gstresnet50v1.c',
 	'gsttinyyolov2.c',
-	'gsttinyyolov3.c'
+	'gsttinyyolov3.c',
+	'gstrosetta.c'
 ]
 
 gstinference = library('gstinference',
